src/parser/expr/snapshots/hulk__parser__expr__unary__tests__parser_snapshot_unary_neg.snap
---
source: src/parser/expr/unary.rs
expression: ast
---
node:
  Unary:
    op:
      node: Neg
      span:
        start: 9
        end: 10
    expr:
      node:
        Literal:
          node:
            Number: 42
          span:
            start: 10
            end: 12
      span:
        start: 10
        end: 12
span:
  start: 9
  end: 12
